--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -23,7 +23,7 @@
     "addProfilesLabel": "Add Profiles",
   "cancelButton": "Cancel",
   "addButton": "Add",
-    "conversationLabel": "Conversation",
+    "conversationLabel": "Conversations",
   "createNewConversationButton": "Create New Conversation",
   "infoLabel": "Info",
   "addButton": "Add",
