--- a/lib/l10n/intl_fr.arb
+++ b/lib/l10n/intl_fr.arb
@@ -23,7 +23,7 @@
    "addProfilesLabel": "Ajouter des profils",
   "cancelButton": "Annuler",
   "addButton": "Ajouter",
-    "conversationLabel": "Conversation",
+    "conversationLabel": "Discussions",
   "createNewConversationButton": "Créer une nouvelle conversation",
   "infoLabel": "Info",
   "addButton": "Ajouter",
